kubernetes/base/aggregator/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator
  labels:
    app.kubernetes.io/name: aggregator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: aggregator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aggregator
        app.kubernetes.io/part-of: ssi-kubernetes
    spec:
      containers:
      - name: aggregator
        image: ghcr.io/kuruyia/ssi-kubernetes/aggregator:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 3010
            name: http-api
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
        livenessProbe:
          httpGet:
            path: /
            port: 3010
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 3010
          periodSeconds: 5
