kubernetes/base/aggregator/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: aggregator
spec:
  selector:
    app.kubernetes.io/name: aggregator
  ports:
    - protocol: TCP
      port: 3010
      targetPort: http-api
      name: http-api
