kubernetes/base/aggregator/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aggregator
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aggregator
            port:
              name: http-api
